--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Bauso: tu marca de confianza</title>
+        
+    </head>
 <body>
 
     <img src ="Bauso.png">
