--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Bauso: tu marca de confianza</title>
-        
+        <link rel="stylesheet" href="styles.css">
     </head>
 <body>
 
-    <img src ="Bauso.png">
+    <img src ="Bauso.png" class="center">
 
 </body>
 </html>
